--- a/machine.html
+++ b/machine.html
@@ -67,6 +67,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/lendbuzz/5fbce6f5-1c2a-41f8-92f5-424eec1ae960'>Lendbuzz - Machine Learning Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1670264?gh_src=609cd4691'>Job Application for Engineering Manager, Machine Learning at Wikimedia Foundation</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
@@ -111,6 +115,11 @@
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://neya.applytojob.com/apply/YsWil26rKg/Machine-Learning-And-Computer-Vision-Engineer-multiple-Levels'>Machine Learning and Computer Vision Engineer (multiple levels ...</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Oct 16, 2019 ... We are looking for a strong software engineer with experience in machine 
+learning and computer vision to join our team.</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/quora/jobs/4437774002'>Job Application for Engineering Manager - Machine Learning at Quora</a></h5> 
 <p><span class="badge badge-light">Mountain View, California United States</span></p>
 <p>Posted on: 2019-10-30</p>
@@ -119,7 +128,7 @@
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ASIFR/743999698452656-stage-data-mise-en-uvre-d-une-solution-machine-learning-nlp-h-f-'>ASI STAGE DATA ? MISE EN ?UVRE D?UNE SOLUTION MACHINE LEARNING NLP (H/F) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ASIFR/743999698452656-stage-data-mise-en-uvre-d-une-solution-machine-learning-nlp-h-f-'>ASI STAGE DATA ? MISE EN ?UVRE D?UNE SOLUTION MACHINE LEARNING NLP (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -172,7 +181,7 @@ Deep Learning (Linear, CNN, GRU, LSTM, Attention, Transformer), etc.</p>
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698266263-computer-vision-machine-learning-engineer-engineering-center-cluj'>Bosch Group Computer Vision & Machine Learning Engineer, Engineering Center Cluj | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698266263-computer-vision-machine-learning-engineer-engineering-center-cluj'>Bosch Group Computer Vision & Machine Learning Engineer, Engineering Center Cluj | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cluj-Napoca, Romania</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -372,7 +381,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light">Indonesia Indonesia Indonesia</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TurnitinLLC/743999697820294-machine-learning-ml-engineer-authorship-product'>Turnitin, LLC Machine Learning (ML) Engineer- Authorship Product | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TurnitinLLC/743999697820294-machine-learning-ml-engineer-authorship-product'>Turnitin, LLC Machine Learning (ML) Engineer- Authorship Product | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -443,7 +452,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/meliuz/fecbac18-2251-4a03-8a8b-f7627f314f21'>Meliuz - Pessoa Engenheira de Machine Learning S?nior</a></h5> 
+<h5><a href='https://jobs.lever.co/meliuz/fecbac18-2251-4a03-8a8b-f7627f314f21'>Meliuz - Pessoa Engenheira de Machine Learning S?nior</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -484,14 +493,6 @@ to?...</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/tsra-main/job/oldebfwH'>Xperi Careers - Automotive Vision - Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light">Bucharest, Romania</span></p>
-<p>Posted on: 2019-10-19</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/tsra-main/job/owRebfww'>Xperi Careers - Research & Development Engineer, Machine Learning</a></h5> 
-<p><span class="badge badge-light">Bucharest, Romania</span></p>
-<p>Posted on: 2019-10-19</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/asapp-2/447e93d3-528b-414a-897f-863077a2717a'>ASAPP - Machine Learning Platform Engineer</a></h5> 
-<p><span class="badge badge-light">Buenos Aires  Buenos Aires</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
 
