Job Application for Front-end Developer at Roivant Sciences. iSpace, Inc. Cloud Solutions Engineer - Front-End | SmartRecruiters. Guidewire Software, Inc. Careers - Software Engineer, Front End - Krakow, Poland. NodeJS /Front End Developer - Remote, San Francisco or Boston job in Remote at Fauna, Inc.. Senior Front End Developer - Identity | Okta. Job @ CAYA (Berlin): (REACT NATIVE) FRONT-END DEVE... | JOIN. Senior Front End Engineer at Blockchain — CoinJobs. Front-End Developer - Ritchie Bros. Careers. Job Application for Software Engineer- Front End at Fuze. Job Application for Senior Software Engineer- Front End at Fuze. Freedom Financial Network Careers - Senior Front End Engineer. Job @ Homeday (Berlin): Frontend Engineer (m/f/x) | JOIN. Job Application for Software Engineer II, Front End at Dataminr. Guidewire Software, Inc. Careers - Senior Software Engineer, Front End - Krakow, Poland. Castle Group Careers - Front Desk Attendant - Four Corners/Kissimmee. Castle Group Careers - Front Desk Attendant or Concierge. Castle Group Careers - Front Desk Attendant or Concierge. Castle Group Careers - Front Desk Attendant or Concierge.       Front-end Developer - Funda     . Aroghia Group Web Front End Engineer for Global Sportswear Brand | SmartRecruiters. RingCentral Careers - Front-end Engineer. RevZilla - Front End Engineer. lm group Senior Front end Engineer | SmartRecruiters. Job Application for Software Developer (Front-End / UI) at Callibrity. Guidewire Software, Inc. Careers - Software Engineer Front-End – Dublin, Ireland.     Senior Frontend Developer at 4Finance IT . Job Application for Frontend Engineer (Monitor Team) at GitLab. Job Application for Frontend Engineer (Configure & Serverless Team) at GitLab. 		Impact Hub Zurich | 		Front-End-Host Colab - 100% - Impact Hub Zurich	. 3Pillar Global - Senior Software Engineer/Software Engineer II- Front End. Guidewire Software, Inc. Careers - Senior Software Engineer Front-End - Dublin, Ireland.       Front-end D

--- a/frontend.html
+++ b/frontend.html
@@ -39,10 +39,10 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://boards.greenhouse.io/roivantsciences/jobs/1934439'>Job Application for Front-end Developer at Roivant Sciences</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">New York, NY United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/iSpaceInc/743999698533907-cloud-solutions-engineer-front-end'>iSpace, Inc. Cloud Solutions Engineer - Front-End | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/iSpaceInc/743999698533907-cloud-solutions-engineer-front-end'>iSpace, Inc. Cloud Solutions Engineer - Front-End | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -58,7 +58,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://getcaya.join.com/jobs/471531-react-native-front-end-developer-m-w-x'>Job @ CAYA (Berlin): (REACT NATIVE) FRONT-END DEVE... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://getcaya.join.com/jobs/471531-react-native-front-end-developer-m-w-x'>Job @ CAYA (Berlin): (REACT NATIVE) FRONT-END DEVE... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -70,11 +70,11 @@
 <p><span class="badge badge-light">Burnaby Burnaby Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/thinkingphones/jobs/1937416'>Job Application for Software Engineer- Front End at Fuze</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/thinkingphones/jobs/1937416'>Job Application for Software Engineer- Front End at Fuze</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/thinkingphones/jobs/1939551'>Job Application for Senior Software Engineer- Front End at Fuze</a></h5> 
+<h5><a href='https://boards.greenhouse.io/thinkingphones/jobs/1939551'>Job Application for Senior Software Engineer- Front End at Fuze</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA  Boston, MA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -124,7 +124,7 @@
 <p><span class="badge badge-light">Paris, France  Paris</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/revzilla/002be844-5c04-4697-880f-c74489707aa9'>RevZilla - Front End Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/revzilla/002be844-5c04-4697-880f-c74489707aa9'>RevZilla - Front End Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -230,7 +230,7 @@
 <p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/lmgroup/743999698465571-senior-front-end-engineer'>lm group Senior Front End Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/lmgroup/743999698465571-senior-front-end-engineer'>lm group Senior Front End Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Madrid, Spain</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -296,11 +296,11 @@
 <p><span class="badge badge-light">Utrecht, Netherlands</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/nobul/bddd8265-866e-4349-a060-76d6064e40a4'>Nobul - Front End Web Developer - React</a></h5> 
+<h5><a href='https://jobs.lever.co/nobul/bddd8265-866e-4349-a060-76d6064e40a4'>Nobul - Front End Web Developer - React</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://itron.referrals.selectminds.com/jobs/front-end-software-engineer-intern-3015'>Front-end Software Engineer Intern - Itron Careers</a></h5> 
+<h5><a href='https://itron.referrals.selectminds.com/jobs/front-end-software-engineer-intern-3015'>Front-end Software Engineer Intern - Itron Careers</a></h5> 
 <p><span class="badge badge-light">Budapest</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -368,11 +368,11 @@
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.kanepartners.net/frontend-software-engineer/job/11763642'>Frontend Software Engineer</a></h5> 
+<h5><a href='https://jobs.kanepartners.net/frontend-software-engineer/job/11763642'>Frontend Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ruelala/jobs/1931536'>Job Application for Principal Front-End Engineer at Rue Gilt Groupe</a></h5> 
+<h5><a href='https://boards.greenhouse.io/ruelala/jobs/1931536'>Job Application for Principal Front-End Engineer at Rue Gilt Groupe</a></h5> 
 <p><span class="badge badge-light">Boston, MAUnited States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -432,7 +432,7 @@ Enterprise Software team in building highly interactive, intuitive and responsiv
 <p><span class="badge badge-light">Brazil  North America</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qLHaVfwh&k=Job&j=o5Pfbfw4&__jvst=Employee&__jvsd=syFcciwo&__jvsc=Twitter&bid=nzNxnMwx'>Egnyte Careers - Senior Frontend Engineer - Protect</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qLHaVfwh&k=Job&j=o5Pfbfw4&__jvst=Employee&__jvsd=syFcciwo&__jvsc=Twitter&bid=nzNxnMwx'>Egnyte Careers - Senior Frontend Engineer - Protect</a></h5> 
 <p><span class="badge badge-light">Mountain View, California  Mountain View, California  Raleigh, North Carolina</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -444,7 +444,7 @@ Enterprise Software team in building highly interactive, intuitive and responsiv
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/94A1E34B4B'>Senior Software Engineer- Front End - Bevi</a></h5> 
+<h5><a href='https://www.workable.com/j/94A1E34B4B'>Senior Software Engineer- Front End - Bevi</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 18, 2019 ... As a Senior Software Engineer- Front End, your guidance and input drive 
 architecture and functionality decisions. Whether you prefer providing mentorship 
